# ch32

./: .gitignore  README.MD  flake.nix
.github/workflows/: nix.yaml
ch32x035/usart-printf-c/: CMakeLists.txt
ch32x035/usart-printf-c/User/: ch32x035_conf.h
ch32x035/usb-device-compositekm-c/: CMakeLists.txt
ch32x035/usb-device-compositekm-c/User/: main.c  usbd_composite_km.h  usbd_compostie_km.c
ch58x/: README.MD
ch58x/ble-hid-keyboard-c/: CMakeLists.txt
ch58x/uart1-c/src/: main.c
ch58x/uart1-irq-c/: CMakeLists.txt
ch58x/uart1-irq-c/src/: main.c
ch58x/usb-device-com-c/: CMakeLists.txt
ch58x/usb-device-com-c/src/: main.c
ch58x/usb-device-compounddev-c/: CMakeLists.txt
ch58x/usb-device-compounddev-c/src/: main.c
cmake/toolchains/: riscv-none-embed.cmake
nix/mrs-toolchain/: base.nix  default.nix
nix/wch-udev-rules/: 50-wch.rules  default.nix  result
nix/wchisp/: default.nix
nix/wlink/: default.nix
nix/xpack-riscv-none-elf-gcc/: base.nix  default.nix
notes/cards/: 20240809092247-weact_studio_ble_core_board.org  20240809154939-wch_link_debugger.org  20240809155033-wch_link_r1_1v1.org  20240809155219-wch_linke_r0_1v3.org  20240809155301-wch_linkw_r0_1v1.org  20240809155930-weact_studio_wch_link_debugger.org  20240809161412-ch58x.org  20240809161924-ch59x.org  20240809164649-mounriver_studio.org  20240809164738-wchisp_studio.org  20240809164810-ch32_rs.org  20240809164845-rust_programming_language.org  20240809164902-wchisp.org  20240809164946-wlink.org  20240809165109-qmk_port_ch582.org  20240809165211-keyboard_firmware.org  20240809165226-kirei.org  20240809165250-c_programming_language.org  20240809165259-zig_programming_language.org  20240809165318-nickel_configuration_language.org  20240811113210-wch_link_pin_connections.org  20240811113236-wch_link_for_ch58x.org  20240811113244-wch_link_for_ch59x.org  20240811113252-wch_link_for_ch32v203.org  20240811113307-wch_link_for_ch32x035.org  20240811113333-risc_v_gnu_toolchain.org  20240811113345-mounriver_studio_risc_v_gnu_toolchain.org  20240811113402-xpack_risc_v_gnu_toolchain.org  20240812114001-differences_between_mrs_and_open_source_risc_v_toolchain.org  20240812114438-wch_link_supported_chip_models.org  20240812114502-wch_link_user_manual.org
